--- a/Vigilante-home.html
+++ b/Vigilante-home.html
@@ -17,7 +17,7 @@
 
     <div class="parallax-container">
         <div class="parallax-bg"></div>
-        <img src="assets/Group 6.png">
+        <img src="assets/Vigilante-home.png">
     </div>
 
     <div class="content">
