--- a/Vigilante-obras.html
+++ b/Vigilante-obras.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/Vigilante-general.css">
     <link rel="stylesheet" href="style/Vigilante-obras.css">
+    <link rel="stylesheet" href="https://use.typekit.net/mri7yfx.css">
     <link rel="icon" type="image/x-icon" href="assets/Vigilante.ico">
     <title>VIGILANTE</title>
 </head>
